metadata/unpackaged/objects/ExchRate__c.object
<CustomObject>
    <description>Automatically generated by EscapeNotes. Remove this text to write protect from EscapeNotes.</description>
    <fields>
        <fullName>Created__c</fullName>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocumentId__c</fullName>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExchRateDate__c</fullName>
        <description>&lt;Default Value Formula&gt;
@If(ExchRateDate = &quot;&quot; ; @Now ; QuoDate)</description>
        <label>ExchRateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExchRateGBP__c</fullName>
        <description>&lt;Default Value Formula&gt;
@Subset(@DbColumn(&quot;&quot; : &quot;NoCache&quot;; &quot;&quot;; &quot;LookupExchRate&quot;; 3); 1)</description>
        <label>ExchRateGBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExchRateUSD__c</fullName>
        <description>&lt;Default Value Formula&gt;
@Subset(@DbColumn(&quot;&quot; : &quot;NoCache&quot;; &quot;&quot;; &quot;LookupExchRate&quot;; 2); 1)</description>
        <label>ExchRateUSD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastModified__c</fullName>
        <label>Last modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NotesFiles__c</fullName>
        <label>Notes Files</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REF__c</fullName>
        <label>REF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplicaId__c</fullName>
        <label>Replica Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionExchRate__c</fullName>
        <description>&lt;Value Formula&gt;
&quot;[ExchRate]&quot;</description>
        <label>SectionExchRate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ExchRate</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExchRate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>